--- a/2025/MediaRepresentationVI/mr6_13.md
+++ b/2025/MediaRepresentationVI/mr6_13.md
@@ -266,13 +266,14 @@ Language Server CL: 841922742
 右下の「Antigravity-settings」からCustumization-Manageをクリックしてからglobalをクリックして「応答は日本語で行ってください」とすることで、メッセージが日本語化されます。
 
 ## モデルの選択
-| 利用可能なモデル              | 特徴                                                                                            | 
-| ----------------------------- | ----------------------------------------------------------------------------------------------- | 
-| Gemini 3 Pro（High）          | Antigravityの中核モデル。最も高い自律性と推論能力を持ち、長時間の介入なしでのタスク実行が可能。 | 
-| Gemini 3 Pro（Low）           | 軽量なタスク向けのコスト効率の良いバージョン。                                                  | 
-| Claude Sonnet 4.5             | Anthropic社の高いコーディング能力と安全性で定評のある最新モデル。                               | 
-| Claude Sonnet 4.5（Thinking） | 深い思考プロセスを伴うバージョン。                                                              | 
-| GPT-OSS                       | OpenAIの技術に基づくオープンモデル。                                                            | 
+
+| 利用可能なモデル| 特徴| 
+| ----------------------------- | ----------------------------------------- | 
+| Gemini 3 Pro（High）| Antigravityの中核モデル。最も高い自律性と推論能力を持ち、長時間の介入なしでのタスク実行が可能。 | 
+| Gemini 3 Pro（Low） | 軽量なタスク向けのコスト効率の良いバージョン。| 
+| Claude Sonnet 4.5| Anthropic社の高いコーディング能力と安全性で定評のある最新モデル。| 
+| Claude Sonnet 4.5（Thinking） | 深い思考プロセスを伴うバージョン。| 
+| GPT-OSS| OpenAIの技術に基づくオープンモデル。| 
 
 ちょっと試してみたところ、Gemini 3 Pro(High)のクオリティが高いです。
 制作するだけであれば、これとあとで紹介するエージェントモード(Fast)でいけそうです。
@@ -290,6 +291,7 @@ Language Server CL: 841922742
 ### Planning（計画重視）
 - 用途: 深いリサーチ、複雑な作業、または共同作業。
 - 特徴: エージェントはタスクを実行する前に計画を立て、タスクグループに作業を整理し、Artifactsを作成します。徹底的に調査・検討を行ってから実装に移ります。
+
 ### Fast（速度重視）
 - 用途: 変数名の変更、数回のBashコマンド実行など、シンプルで局所的なタスク。
 - 特徴: エージェントは計画を立てずに直接タスクを実行します。スピードが重要で、品質低下のリスクが少ない場合に最適です。
@@ -298,11 +300,12 @@ Language Server CL: 841922742
 怖いので、説明だけにします。
 ターミナルコマンドの自動実行権限、ファイルアクセス権限の設定があります。
 
-これ、便利になるかもしれませんが、勝手にAIが操作できることを意味します。気をつけましょう。
+これ、便利になるかもしれませんが、勝手にAIが自分のコンピュータを操作できることを意味します。
+すべてを自動でできるモードは危険です。適宜、確認を聞いてくるモードが良いと思います。
 
 ## geminiと異なるところ
 作業用のフォルダを明示しましょう。
-すると、その中に自動的にファイルを作成していきます。
+すると、その中に自動的にファイルを複数作成していきます。
 
 ---
 ## 動画で見てみよう
