--- a/2025/MediaRepresentationVI/mr6_14.md
+++ b/2025/MediaRepresentationVI/mr6_14.md
@@ -1,4 +1,4 @@
-# メディア表現 VI 14.AIの現状
+# メディア表現 VI 14. ~~AIの現状~~ AI 4
 
 [メディア表現 VI TOP に戻る](./index.md)
 
@@ -6,344 +6,175 @@
 
 ## 目次<!-- omit in toc -->
 
-- [メディア表現 VI 14.AIの現状](#メディア表現-vi-14aiの現状)
-  - [初回で触れたAI](#初回で触れたai)
-  - [(番外編)関係ないけど...mixi2](#番外編関係ないけどmixi2)
-  - [OpenAI](#openai)
-  - [Google Gemini 2.0](#google-gemini-20)
-  - [進化が相変わらず早すぎる...](#進化が相変わらず早すぎる)
-  - [AI使いこなす人とそうでない人](#ai使いこなす人とそうでない人)
+- [メディア表現 VI 14. ~~AIの現状~~ AI 4](#メディア表現-vi-14-aiの現状-ai-4)
+  - [AI4回目](#ai4回目)
+    - [google系geminiで行けるかと踏んだのですが、](#google系geminiで行けるかと踏んだのですが)
+    - [LMarena Leaderboard](#lmarena-leaderboard)
   - [カオスマップ](#カオスマップ)
-  - [Xでの評判](#xでの評判)
-  - [Felo](#felo)
-  - [Genspark](#genspark)
-  - [AnyChat](#anychat)
-  - [Gamma](#gamma)
-  - [プロンプトジェネレータ](#プロンプトジェネレータ)
-  - [Mapify](#mapify)
+  - [OpenAI + Adobe](#openai--adobe)
+    - [利用できるように設定してみましょう。](#利用できるように設定してみましょう)
+    - [使い方](#使い方)
+  - [MCP](#mcp)
+    - [MCP(Model Context Protocol)の概要](#mcpmodel-context-protocolの概要)
+  - [AIエージェント](#aiエージェント)
+  - [Disco](#disco)
+  - [Google AI Studio](#google-ai-studio)
+  - [AIをめぐる著作権戦争](#aiをめぐる著作権戦争)
+  - [AIまとめ](#aiまとめ)
 
 ---
 
-## これまでのおさらい<!-- omit in toc -->
-他の授業で扱えていないデジタルツールについていろいろ紹介してきました。
+## AI4回目
+今日はAIを扱って4回目となります。
+- チャット(gemini)
+- RAG(NotebookLM)
+- IDE(Antigravity)
 
-ノーコードツールはコーディング(文字によるプログラミング)をしてはいないのだけど、難しかったかな？
+と扱ってきました。
 
+昨年度も14回目はAIを扱っていますが、全然内容古くなってますね。
+今日は、今週の動向を中心に扱っていこうと思います。
 
-## 本日の内容<!-- omit in toc -->
-AIがさらに進化しています。キャッチアップしていきましょう。
-基本は無料で利用できるところを中心に説明していきます。
+---
+### google系geminiで行けるかと踏んだのですが、
+- [ChatGPT 5.2が発表(12/11)](https://openai.com/ja-JP/index/introducing-gpt-5-2/)
 
-## 初回で触れたAI
-- AI歴史
-- ChatGPT
-- LLM
-- Edge(BingAI=GPT4)
-- 画像生成AI
-- プロンプトエンジニアリング
+発表直前には[コードレッド(緊急事態)](https://www.businessinsider.jp/article/2512-openai-code-red-google-competitive-threat/)が発表されていました。
 
-## (番外編)関係ないけど...mixi2
-16日に発表されましたね。
-- [招待制「mixi2」基本の使い方、簡単にまとめました](https://news.yahoo.co.jp/articles/3ccb1faa9d70139b1afd693772163ea7375648a8)
+Google vs OpenAIの構図はこれから一層進んでいくと思います。
 
-mixiは一世風靡しましたが、その後廃れてゲーム会社として成長してきました。
-新たなSNSがどうなるかはユーザ次第ですね。
+### LMarena Leaderboard
+性能を比較するサイトとして有名なのがLeaderboardとなります。
 
-- [2024年｜日本・世界のSNSの利用者数ランキングまとめ！SNS別のマーケティング成功事例も解説](https://www.hottolink.co.jp/column/20240214_114872/)
+日々性能が変わりますから、現在どれがどう優れているか、について調べられるようにしておきましょう。
 
-## OpenAI
-現在12日間連続で12/5から新製品リリースされています。
+- [LMarena Leaderboard](https://lmarena.ai/ja/leaderboard)
 
-- [12 Days of OpenAI](https://openai.com/12-days/)
+> LMArena Leaderboardは、ユーザーからの投票に基づいてAIモデル（特に大規模言語モデル LLM）の性能をランキング形式で表示するプラットフォームです。
 
-8日目が終わったところですが主なところは
-- [o1正式リリース(有料)](https://chatgpt-lab.com/n/n383682923a94)
-- [Sora(有料)](https://shift-ai.co.jp/blog/11957/#Sora%E3%81%AE%E5%88%A9%E7%94%A8%E6%96%99%E9%87%91%E3%81%A8%E3%83%97%E3%83%A9%E3%83%B3%E3%81%AB%E3%82%88%E3%82%8B%E5%88%B6%E9%99%90d)
-- [Canvas](https://chatgpt-lab.com/n/n049c1ead6720)
-- [Apple Intelligenceとの連携強化](https://www.apple.com/jp/newsroom/2024/12/apple-intelligence-now-features-image-playground-genmoji-and-more/)
-- [Advanced Voice Modeへの動画モード追加](https://x.com/i/status/1867273710991991063)
-- [Projects(現在有料)](https://chatgpt-lab.com/n/nd0cf9914437b)
-- [ChatGPT検索機能のアップデート](https://gigazine.net/news/20241217-chatgpt-search-openai/)
+一応、これを見る限り、google系の総合力はまだ健在のようです。
 
-## Google Gemini 2.0
-- [Google AI Studio](https://aistudio.google.com)
-- [Veo 2](https://deepmind.google/technologies/veo/veo-2/)
-- [Imagen 3](https://deepmind.google/technologies/imagen-3/)
-
-Googleは
-- Gemini 2.0を204/12/12に公開
-- Soraに対抗して、Veo2・Imagen 3等を発表・改良版リリース(もうちょっとかかるみたい)
-
-- [Google最新AI！Gemini 2.0 Flashが凄かったので解説してみた](https://www.youtube.com/watch?v=CwiOtC2FztM)
-
-飛ばしながら見るとして、「Stream Realtime」を試してみましょう。
-
-
-## 進化が相変わらず早すぎる...
-なお、OpenAI, Googleの発表はどちらも、1週間以内に行われたものです。
-
-さすがに自分も毎週流れについていくのはもう諦めました。
-
-ですが、要所要所で追いつこうとはしています.
-
-## AI使いこなす人とそうでない人
-これ間違いなく、生産性に影響を与えると思います。
-
-これまで、
-- PC使える人・使えない人
-- ネット使える人・使えない人
-
-という議論がありましたが、今後は間違えなく
-- AI使える人・使えない人
-
-が問われる世の中になると思います。
-
-全てを使う必要はないと思うのですが、自分のこれから行うことに役立つ可能性のあることは押さえておくと良いと思います。
-
+---
 ## カオスマップ
-もう古いんですけど...
+就職も睨んで、「カオスマップ」という単語を紹介します。
 
-2024/12/02更新
 - [生成AIカオスマップ 国内向けサービスを初公開！掲載数は258製品！](https://aismiley.co.jp/ai_news/generativeai-chaosmap/)
+- [https://ai-market.jp/whitepaper/ai-development_caosmap2025/](【AI開発業界まるわかり】国内外AI開発カオスマップ2025（掲載数179社・サービス）)
+- [「AIエージェント カオスマップ」を公開](https://www.lancers.co.jp/news/pr/24365/)
 
-- [ノーコード＆AIカオスマップ更新
-【2024年11月版】](https://no-coders-japan.org/nocode-ai-industry-landscape-map)
+> カオスマップとは、**特定の業界や分野の企業・サービスを機能やカテゴリー別に分類し、ロゴなどを配置して視覚的に整理した「業界地図」**のことです。複雑な市場の全体像や勢力図、トレンドを一目で把握でき、自社の立ち位置確認や、目的のサービス・ツール選定を効率化するのに役立ちます。特にIT・デジタルマーケティング分野で広く使われており、アメリカ発祥の「LUMAscape」が日本で「カオスマップ」として広まったのが起源です。 
 
-## Xでの評判
-- [まずは触ってみることが大切！！](https://x.com/okuyama_ai_/status/1861653120121741523)
-- [ChatGPTしか使っていない人は時代遅れです。](https://x.com/shota7180/status/1813507330736275529)
+- [LUMA Partners の創設者が、カオスマップ（LUMAscape）を発表した理由](https://www.admarketech.com/2013/05/lumascapes-and-luma-partners.html)
 
-いくつか触ってみましょう。
+「業界名+カオスマップ」でググると最近勢いのある企業を探すことができるでしょう。
 
-## Felo
-最近気になっているのはこれだったりします
-- AI検索
-- マインドマップ
-- 資料作成
+---
 
-等ができるようです。(Pro検索も1日5回まで無料)
+## OpenAI + Adobe
+Adobeはどこに向かうのでしょうか？
+Adobe製品へのAI搭載が最近急ピッチで進んでいますが、OpenAIとAdobeの提携が発表されました。
 
-- [Felo AI](https://felo.ai/ja/search)
-- [【ヤバすぎる】超万能AI Felo AIを徹底レビュー【AI検索,マインドマップ,資料作成が一瞬】](https://www.youtube.com/watch?v=SB6WL0fTfp4)
+- [ChatGPTでPhotoshop、Express、Acrobatが動く──Adobeが「Apps SDK」連携](https://www.itmedia.co.jp/news/articles/2512/11/news071.html)
 
-試しに
-> 2024年12月における、実際に無料で使えるAIツールを20個特徴とともに教えて
+> ChatGPTでAdobeアプリを使うには、チャット欄にアプリ名とやりたいことを書き込むだけだ。例えば編集したい画像をアプリにアップロードし、「Adobe Photoshop、この画像の背景をぼかして」と入力すると、ChatGPTがPhotoshopを自動的に呼び出し、画像の背景をぼかす処理を文脈に沿って案内する。チャット上でのやり取りに加え、Photoshop側のスライダーを使って明るさやコントラストなどを微調整することもでき、会話とGUIの双方を組み合わせて編集を進められる。
 
-をやってみました。
-- マインドマップ(検索後、下のボタンから)
-- スライド作成(検索後、右上のボタンから)
+> Adobe ExpressとAdobe Acrobatを使うにはAdobeのアカウントが必要だ。
 
-を行なってみましょう。
+あまり設定に触れている記事がなくて、探すのに苦労しましたが、設定が必要です。
 
-## Genspark
-リサーチに強いとされるGensparkですが、ファクトチェックというユニークな機能がついています。
+### 利用できるように設定してみましょう。
+1. [chatgpt](https://chatgpt.com/)を開く
+2. chatgptはログインしましょう。
+3. 左下のユーザアイコンをクリックして「設定」
+4. 「アプリとコネクター」にて、Adobe Acrobat, Express, Photoshopをそれぞれ選んで追加する。
 
-- [Genspark](https://www.genspark.ai/)
+### 使い方
+1. +から「さらに表示」のところに出てきます。例えばPhotoshopを選んでみましょう。
+2. 画像をアップロード
+3. 「緑系にして」などとプロンプトを打つと、「現在(Current)」「色相・彩度(Hue & Sasturation)」「自然な彩度（Vibrance）」が出てきます。
+4. 例えば、「色相・彩度(Hue & Sasturation)」の右上のスライダーアイコンをいじることができます。
+5. さらなる加工が必要な場合には、「Open in Photoshop」とすることで、Web版のPhotoshopで編集することも可能となっています。
 
+---
+## MCP
+さて、このOpenAIとAdobeの連携はどのように実装されているのでしょうか？
 
-## AnyChat
-複数モデルを切り替えながらつかえるAnyChatも気になっています。
-- [ChatGPT超え!?😲 AnyChatで話題のLLM使い放題💖 最新・最強のAIモデル勢揃い✨ 個別課金はもう不要！](https://note.com/ai_hakase/n/n9f8c328e8a52#7967cf6b-5965-4010-add2-f3993ec3ddeb)
+- [ChatGPT のコネクター](https://help.openai.com/ja-jp/articles/11487775-connectors-in-chatgpt)
 
-ただし、インストールに癖があるので全員におすすめではありません。
+> カスタムコネクターを使用すると、モデルコンテキストプロトコル（MCP）を通じて、サードパーティシステムや社内データを ChatGPT に連携できます。
 
-## Gamma
-スライド生成に強いAIサービスです。編集機能も多いです。
 
-- [Gamma](https://gamma.app/ja)
+### MCP(Model Context Protocol)の概要
+- 2024年にAnthropic社が発表した、大規模言語モデル（LLM）と外部ツールやデータソースを連携させるためのオープンプロトコルです。
+- AIが最新情報や固有のナレッジにアクセスできるようになり、開発の効率化やAIの能力拡張を目的としています。
+- 「AIのためのUSB-Cポート」と表現されるように、様々なシステムとの共通の形式での接続を可能にします。
 
-LLMで「〜のスライドを作成するので構成案を考えてください」と聞いた後、その答えをGammaにコピペでスライドを作成することができます。
+- [モデル コンテキスト プロトコル (MCP) とは何ですか? なぜ重要ですか?(2:26)](https://www.youtube.com/watch?v=TySUi3TYheM)
 
-これは紹介のみ
+---
+## AIエージェント
+AI関連で重要なワードに「AIエージェント」というものがあります。
 
-## プロンプトジェネレータ
-生成AIのプロンプトに何を入力するかを考える
-> プロンプトエンジニアリング
+- [AIエージェントとは何か？ AIワードを解説！01(2:13)](https://www.youtube.com/watch?v=IwXoTZTCPh0)
 
-という分野があることを紹介しましたが、そのプロンプトを考えるサービスも出てきています。
+Deep Researchは研究に特化したAIエージェントとなります。
 
-無料で使えるのだと現在は
-- [Prompt Optimizer](https://www.quartzite.ai/tools/free-ai-prompt-optimizer)
+業務を自動化するには[n8n(エヌエイトエヌ)](https://n8n.io/)と呼ばれるサービスが流行っていますが、これは、人が決めたルールを自動で実行してくれる司令塔、のような存在です。
 
-かな。英語になっちゃうけど、後で日本語に翻訳して貰えば...
+AIエージェントは与えられた目標を自分で考えながら達成する頭脳と呼べるでしょう。
 
-## Mapify
-- [Mapify](https://mapify.so/ja)
+n8nもまだまだ場面によっては、使えると思うので紹介しておきます。
+- [【初心者向け】n8nとは何か？基本を徹底解説(3:23)](https://www.youtube.com/watch?v=tN_pREtgrhM)
 
+また、[Manus](https://manus.im/)も1.6が出て、評判が良いようです。
 
+スマホアプリが公開までできると話題になっています。
 
+---
+## Disco
+Googleが新しいウェブブラウザをリリースしてきました。(まだテスト運用中ですが)
+AIによって検索する機会が減っている人もいますが、また新たな可能性を提示してきています。
 
-<!--
-## Google Gemini
-ChatGPTを遥かに超えるか？という
-衝撃が走る動画が12/7に発表されました。
-- [Geminiのタブレットデモ -Impress Watch](https://www.youtube.com/watch?v=kfmCzdNr1iQ)
+- [Google Disco](https://labs.google/disco)
 
-が、その後
+> Discoは単なるブラウザではありません。開いているタブの内容を自動的に分析し、あなたの目的に合わせたカスタムアプリを瞬時に生成する、まったく新しいウェブ体験を提供します。例えば、旅行の計画を立てているときに複数のサイトを開いていると、自動的に旅行プランナーアプリが生成され、地図、スケジュール、おすすめスポットが一つの画面に整理されるのです。
 
-> なんかおかしくない？
+---
+## Google AI Studio
+これも紹介しておきます。
 
-という意見があり、検証動画が出ています。この検証動画の方も見てみましょう。
-- [GoogleのGeminiのデモ動画は嘘だらけでした。Geminiのどこが嘘だったのか？...](https://www.youtube.com/watch?v=P2kduEBXHl4)
+- [Google AI Studio](https://aistudio.google.com/)
 
-## とはいえ...
-この動画は編集がかかっていたものだったとしても、
-今後のAIの進化の方向は示してくれたと思います。
+は、Googleが提供する生成AI開発プラットフォームで、
 
-## 画像生成AIの進化止まらない
-- [leonardo.ai](https://leonardo.ai/)
+> 名前に「Studio」とあるように、AIモデルを自由に調整して実験できる「創作の場」として設計されています。Googleの最新AI技術である「Gemini」をベースとしながらも、より多様な機能やカスタマイズオプションを提供しています。
 
-にRealtime Canvasという機能が出てきました。(昨日の夜？)
-ちょっとみてみましょう。
+実験的なスペースですので、動画にも対応しているのがお得と言えるでしょう。
 
-## 動画生成AIも進化とまらない
-ちょっと追っかけられていませんが、
-- Animate Anyone
-- DreaMoving
-- MagicAnimate
-- Pika
+---
+## AIをめぐる著作権戦争
+LLMは膨大なデータを学習教材として利用します。
+その場合の著作権が問題となっています。
 
-等、動画生成AIもおかしくなってます
+文化庁にても審議がされていて、ここに一応まとまってますが、AIの進化に追いついているのか？？？という感じもしなくはありません。
+- [文化庁：AIと著作権について](https://www.bunka.go.jp/seisaku/chosakuken/aiandcopyright.html)
 
-- [【新登場】DreaMovingはプロンプトや顔画像だけでダンス動画ができる動画生成AI](https://www.youtube.com/watch?v=XvAQvRMHmkc)
+そんな中、摘発者が現れました。
+- [生成ＡＩで作った画像を無断複製の疑い、２７歳男を書類送検…「著作権あり」として初の摘発](https://www.yomiuri.co.jp/national/20251120-OYT1T50104/)
 
-## フェイクニュース
-生成系AIが発展すると、それに伴い動画のフェイクニュースも増えることを意味します。
-これは、本当に気をつけるしかないですね。
+「AIで作られた画像に著作権があると判断」されたことが非常に大きいです。
 
-明らかにフェイクニュースとわかる内容なら良いのですが、
-ほとんど事実の中にフェイクニュースを混ぜられると判断するのは困難となります。
+また、もともと著作権に非常にうるさいディズニーがなんとOpenAIと手を組みました。
 
+- [ ディズニーがオープンAIへの出資＆キャラクター提供に踏み切った訳。グーグルの著作権侵害は非難](https://toyokeizai.net/articles/-/924181)
 
-## ChatGPT
-自然言語を理解するとはいっても、適切に指示を与えないと期待する返答が返ってきません。
-これに関する方法を「プロンプトエンジニアリング」と言って、現在方法も進化中です。
+- [ディズニーとOpenAIの契約は「AI著作権戦争」を再定義した](https://wired.jp/article/disney-and-openais-deal-is-a-major-turning-point/)
 
-- ChatGPT チートシート
+## AIまとめ
+- 使われるんじゃなく使いましょう
+- 日々進化します。せめて何ができるかは押さえましょう。
+- 有能な秘書にすると本当にいいと思います。
 
-などのキーワードで検索をすると様々な方法が出てきます。
+提出物...今日はなし
 
-今日は、
-- [個人的ChatGPTプロンプトチートシート](https://muchipopo.com/poem/chatgpt_prompt/)
 
-に沿って幾つか試してみましょう。
-
-### 基本
-ChatGPT、特に3.5だとサーバの状態により反応速度は変わります。
-止まってしまった場合には
-- 「続き」
-
-とすることで、続けてくれることが広く知られています
-
-### コンサルティングしてもらう系
-#### プロンプトを考えるプロンプト
-ChatGPTを利用するには、先ほど言ったようにプロンプトを適切？に指定しなくてはいけませんが、そのプロンプトをChatGPTに考えてもらう、というずるい手があります。
-
-1. 先ほどのリンク先の「プロンプト考えるプロンプト」を貼り付ける
-
-```
-あなたは私のプロンプトクリエイターです。あなたのゴールは、私のニーズに合った最高のプロンプトを作るのをサポートすることです。そのプロンプトは、あなた、ChatGPTが使用することになります。
-
-次のようなプロセスを踏んでください。
-
-1.あなたの最初の応答は、プロンプトが何のためのものか、プロンプトの目的を質問してください。私の答えを受け、以下ステップの通り、継続的に反復してプロンプトを改善してください。
-
-2.
-a)改訂版プロンプト（書き直したプロンプトを提供する。明確で簡潔で、あなたが理解しやすいものでなければならない）、
-b)提案（プロンプトを改善するためにプロンプトに含めるべき詳細について提案する）、
-c)質問（プロンプトを改善するために私が必要とする追加情報に関して関連質問をする）。
-
-3.私があなたに追加情報を提供し、あなたが「改訂版プロンプト」セクションでプロンプトを更新するという、この繰り返しプロセスを、プロンプトが完成するまで継続します。
-```
-
-2. プロンプトの目的を伝える
-3. 提案に基づき質問が提示されるので、それに答えていく
-4. 満足いくまで繰り返す
-5. 改訂版プロンプトが完成したら、それをChatGPTに考えてもらう
-
-#### プロンプトを考えるプロンプト
-ChatGPT自身が、プロンプトに不明な時があれば質問するように1文をつけて、質問する
-
-1. 質問のプロンプトを記載し
-2. 最後に「プロンプトを考えるプロンプト2」を貼り付ける
-   > このタスクで最高の結果を出すために追加で必要な情報があれば質問をしてください
-3. 質問が来れば答える
-
-#### ポイント
-質問を意図的に促すことによって、より生成系AIの能力を引き出すことができます。
-
-
-### 情報管理系
-グラフや表にまとめることもできますが...ChatGPTが何言ってるかわからないとうまく使えません(4.0はできそうだけど)
-
-#### マインドマップを作ってもらう
-1. お題を決める
-2. 以下の形でプロンプトを投げる
-
-```
-〇〇〇〇をマインドマップにまとめて、PlantUMLで出力してください
-```
-
-とはいえ、なんか吐き出しそうですが、PlantUMLってなんでしょうね？
-これ知らないと、せっかく出力されてもダメそうです。
-
-ちょっとググってみて、マインドマップを表現できるでしょうか
-
-いくつかあると思いますが、
-- 「PlantUML webサービス」とググることで
-- [plantUML(Web版)](https://qiita.com/borerere/items/99d73d7295840a28c473) が出てきたので、そこのリンクの
-- https://www.plantuml.com/plantuml/uml/SyfFKj2rKt3CoKnELR1Io4ZDoSa70000
-
-を使ってみましょう。
-
-#### その他について
-- PlantUML
-- http://quickchart.io
-- Markdown
-
-等、ある程度コンピュータに詳しくないと、便利に利用できませんね。
-今日の一つのテーマなんですが
-> 生成系AIは勝手に色々やってくれる
-
-は正しいんですが
-
-> あくまでも生成系AIはなんでも答えてくれるアシスタントのようなものであり、指示の仕方によって、有効な情報を出してくれることもあるけど、使えない情報を出すこともある
-
-ということになり、
-
-> 生成系AIを利用する人間がある程度賢くないとAIもサポートできない
-
-が現状だと思います。
-
-### シナリオ作成
-生成系AIは、アイディアを考えることを手伝うのにかなり有効だと思います。
-
-> この物語についてSave The Catの形式におけるビートとその物語の出来事を表にしてください。
-
-この参考プロンプトを元に、映画の脚本のシナリオアイディアを考えてみましょう。
-
-ちなみに、
-> 「Save The Catの形式におけるビート」
-
-の意味がわからないと、このプロンプトの意味もわかりませんね。
-
-## まとめ
-
-現在のところ、生成系AIは
-- 便利に様々なタスクをこなしてくれたり
-- アイディアを出してくれたり
-
-できるようになっていますが、指示出しをする人間によってその性能が変わります。
-
-積極的に生成系AIを使っていくことは必須となる世の中になるはずですが、
-> あなたたちの能力も高めていかないといけない
-
-ということは変わらないことを知っておきましょう。
-
-来週は、
-- まとめ
-- レポート課題発表
-
-としたいと思います。
-
--->
