--- a/2026/AnalogueDesignI/ad1_01.md
+++ b/2026/AnalogueDesignI/ad1_01.md
@@ -1,4 +1,4 @@
-# 造形基礎演習I(小林ターム)
+# 造形基礎演習I(小林ターム)<!-- omit in toc -->
 
 ## 1.オリエンテーション <!-- omit in toc -->
 
@@ -7,6 +7,9 @@
 ---
 ## 目次<!-- omit in toc -->
 - [スライド](#スライド)
+- [Teams チームコード](#teams-チームコード)
+- [造形基礎演習I 全体PDF資料(Teamsより転載)](#造形基礎演習i-全体pdf資料teamsより転載)
+
 
 
 ---
@@ -16,11 +19,12 @@
 [スライド資料](./ad1_01slide.pdf){:target="_blank"}
 
 ## Teams チームコード
-**0f0z80a**
+TODO:
 
 0は全て数字のゼロで、大文字のOではないです。
 
 ## 造形基礎演習I 全体PDF資料(Teamsより転載)
+TODO:
 - [前期造形基礎オリエンテーション資料2025](pdf/・前期造形基礎オリエンテーション資料2025.pdf)
 - [前期造形基礎日程表2025](pdf/・前期造形基礎日程表2025.pdf)
 - [講評回①20250509前期造形基礎](pdf/講評回①20250509前期造形基礎.pdf)
