--- a/2026/AnalogueDesignI/ad1_02.md
+++ b/2026/AnalogueDesignI/ad1_02.md
@@ -1,4 +1,4 @@
-# 造形基礎演習I(小林ターム)
+# 造形基礎演習I(小林ターム)<!-- omit in toc -->
 
 ## 2.平坦折り 2 <!-- omit in toc -->
 
@@ -7,6 +7,7 @@
 ---
 ## 目次<!-- omit in toc -->
 - [スライド](#スライド)
+- [Teams チームコード](#teams-チームコード)
 
 
 ---
@@ -16,7 +17,8 @@
 [スライド資料](./ad1_02slide.pdf){:target="_blank"}
 
 ## Teams チームコード
-**0f0z80a**
+TODO:
+
 
 0は全て数字のゼロで、大文字のOではないです。
 
